[package]
name = "poll-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
copypasta = "0.10.2"
dirs = "6.0.0"
eframe = "0.33.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
